# jazz-boolean-algebra

./: CMakeLists.txt  README.md  example.cpp
nandgames/: Xor.md  compare_uint_16.md  mul_16u.md  xor.md
playground/: CMakeLists.txt  example.cpp  example_arithmetics.cpp  example_gates.cpp
src/: CMakeLists.txt
src/jazz/: basic.cpp  basic.h  boolean-algebra.h  boolean.cpp  canonical.cpp  canonical.h  class_hierarchy.h  config.h  expr.cpp  expr.h  flags.h  function.cpp  function.h  hash_seed.h  op_and.cpp  op_and.h  op_not.cpp  op_not.h  op_or.cpp  op_or.h  operations.cpp  operations.h  registration.h  relational.cpp  relational.h  symbol.cpp  utils.h
src/jazz/algebra/: basic.h  boolean.h  canonical.cpp  canonical.h  class_hierarchy.h  expr.cpp  function.h  op_and.cpp  operations.cpp  operations.h  print.cpp  print.h  ptr.h  registration.cpp  symbol.h  wildcard.cpp  wildcard.h
src/jazz/simulation/: arithmetics.cpp  arithmetics.h  component.cpp  component.h  flow.cpp  flow.h  logic_gates.cpp  logic_gates.h
tests/: CMakeLists.txt  test_and.cpp  test_canonical_boolean_functions.cpp  test_gates.cpp  test_not.cpp  test_or.cpp
