find_package(GTest)
if (GTest_FOUND)
    enable_testing()
    file(GLOB_RECURSE TEST_SRC ${PROJECT_SOURCE_DIR}/tests/*.cpp)
    add_executable(unit-test ${TEST_SRC})
    target_link_libraries(unit-test GTest::gtest GTest::gtest_main ${libname})
    include(GoogleTest)
    gtest_discover_tests(unit-test)
endif ()